--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+    <!--header-navbar-->
+    <header>
+        <div class="logo">
+            <img src="https://github.com/houssam-mirrou/Brief-3/blob/main/img/logo.png?raw=true" alt="logo">
+            <h1>e-Dirham</h1>
+        </div>
+        <div class="menu">
+            <a href="#" class="icon-menu"><i class="fas fa-bars"></i></a>
+            <div class="nav-bar">
+                <a href="#">Accueil</a>
+                <a href="#">Fonctionnement</a>
+                <a href="#">Sécurité & Confiance</a>
+                <a href="#">Inclusion & Impact</a>
+                <a href="#">Actualités & Lancement</a>
+            </div>
+        </div>
+    </header>  
     <main>
         <div class="avantage">
             <div>
