abrezzak-impact-done

--- a/impact_inclusion.html
+++ b/impact_inclusion.html
@@ -8,6 +8,65 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="https://github.com/houssam-mirrou/Brief-3/blob/main/img/logo.png?raw=true" alt="logo">
+            <h1>e-Dirham</h1>
+        </div>
+        <div class="menu">
+            <a href="#" class="icon-menu"><i class="fas fa-bars"></i></a>
+            <div class="nav-bar">
+                <a href="index.html">Accueil</a>
+                <a href="fonctionnement.html">Fonctionnement</a>
+                <a href="#">Sécurité & Confiance</a>
+                <a href="impact_inclusion.html">Inclusion & Impact</a>
+                <a href="#">Actualités & Lancement</a>
+            </div>
+        </div>
+    </header>
+    <div class="section sectionOne">
+        <div class="headeSctionOne">
+            <div class="titelePage">
+                <h1> Page Inclusion & Impact Économique</h1>
+            </div>
+            <div class="descriptionPage">
+                <p>
+                    Le projet e-Dirham contribue à l’autonomisation des citoyens et à l’accès à des services financiers
+                    numériques équitables
+                </p>
+            </div>
+
+
+        </div>
+        <div class="buttomSectionOne">
+            <div class="statistiquesTitel">
+                <h1>Statistiques clés</h1>
+            </div>
+            <div class="statistiqueCarts">
+                <div class="statistique cartSction1">
+                    <div class="opacityDive">
+                        <div class="chadow">
+                            <h2>45 % de femmes</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="statistique cartSction2">
+                    <div class="opacityDive">
+                        <div class="chadow">
+                            <h2>Plus de 1,2 million d’utilisateurs</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="statistique cartSction3">
+                    <div class="opacityDive">
+                        <div class="chadow">
+                            <h2>Plus de 3 000 points d’accès financier</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="impact-container">
         <div class="paragraphe">
             <h1>L'impact social</h1>
@@ -32,9 +91,77 @@
             </div>
         </div>
     </div>
+    <div class="section sectionFour">
+        <h1>Témoignages</h1>
+        <div class="map">
+            <img src="img/mapImag.png" alt="imge maroc">
+            <div class="keyMap">
+                <h2>Niveau d’utilisation du e-Dirham</h2>
+                <div class="lestColler">
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                    <div class="cardColle">
+                        <div class="collor"></div>
+                        <p>Très faible</p>
+                    </div>
+                </div>
+                <h4>du plus faible au plus élevé</h4>
+            </div>
+        </div>
+    </div>
     <div class="section-conclusion">
         <h1>Conclusion et perspectives d’avenir</h1>
         <p>Ce projet met en avant l’importance du e-Dirham dans la transformation numérique du Maroc.<br> Grâce à une approche inclusive et durable, il favorise l’accès équitable aux services financiers pour tous les citoyens, tout en stimulant l’économie locale.<br> Les données et cartes présentées montrent l’impact positif sur les régions, notamment en matière d’inclusion financière et d’autonomisation des femmes.<br> L’avenir du e-Dirham repose sur l’innovation continue et la collaboration entre les institutions publiques et privées.</p>
     </div>
+    <footer>
+        <div class="footer1">
+            <div class="bankLogo">
+                <img src="img/Bank_Al-Maghrib_Logo.png" alt="">
+            </div>
+            <div class="followUs">
+                <h6 style="color: #2E3383;">FOLLOW US</h6>
+                <div class="socialMedia">
+                    <img src="img/Facebook (3).png" alt="">
+                    <img src="img/LinkedIn Circled.png" alt="">
+                    <img src="img/X.png" alt="">
+                    <img src="img/YouTube Squared.png" alt="">
+                    <img src="img/Instagram Circle - Copie.png" alt="">
+                </div>
+            </div>
+            <div class="siteLogo">
+                <h5 style="color: goldenrod;">e-Dirham</h5>
+                <img src="img/Capture_d_écran_2025-10-22_162047-removebg-preview.png" alt="">
+            </div>
+        </div>
+        <div class="footer2">
+            <div class="copyright"><h6>© Copyright 2025 All rights reserved</h6></div>
+            <div class="contact">
+                <h5>Contact Us</h5>
+                <img src="img/customer-service - Copie.png" alt="">       
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
