--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -15,10 +15,10 @@
         <div class="menu">
             <a href="#" class="icon-menu"><i class="fas fa-bars"></i></a>
             <div class="nav-bar">
-                <a href="#">Accueil</a>
-                <a href="#">Fonctionnement</a>
+                <a href="index.html">Accueil</a>
+                <a href="fonctionnement.html">Fonctionnement</a>
                 <a href="#">Sécurité & Confiance</a>
-                <a href="#">Inclusion & Impact</a>
+                <a href="impact_inclusion.html">Inclusion & Impact</a>
                 <a href="#">Actualités & Lancement</a>
             </div>
         </div>
