--- a/Sécurité&Confiance.html
+++ b/Sécurité&Confiance.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Protection des données & Confidentialité</title>
-  <link rel="stylesheet" href="../Brief-3/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
 </head>
 
 <body>
+  <header>
+    <div class="logo">
+      <img src="https://github.com/houssam-mirrou/Brief-3/blob/main/img/logo.png?raw=true" alt="logo">
+      <h1>e-Dirham</h1>
+    </div>
+    <div class="menu">
+      <a href="#" class="icon-menu"><i class="fas fa-bars"></i></a>
+      <div class="nav-bar">
+        <a href="index.html">Accueil</a>
+        <a href="fonctionnement.html">Fonctionnement</a>
+        <a href="Sécurité&Confiance.html">Sécurité & Confiance</a>
+        <a href="impact_inclusion.html">Inclusion & Impact</a>
+        <a href="#">Actualités & Lancement</a>
+      </div>
+    </div>
+  </header>
   <!-- SECTION 1 -->
   <section class="section">
     <div class="container">
@@ -27,12 +46,14 @@
 
       <div class="flex">
         <div class="circle">
-          <img src="../Brief-3/img/logo.png" alt="Logo e-Dirham" />
+          <img src="img/logo.png" alt="Logo e-Dirham" />
         </div>
         <div class="text-box">
           <p>
-            Le e-Dirham respecte la loi 09-08 sur la protection des données personnelles et les recommandations de la CNDP.
-            Une politique claire encadre l’usage des données, assurant à chaque citoyen un contrôle total sur ses informations.
+            Le e-Dirham respecte la loi 09-08 sur la protection des données personnelles et les recommandations de la
+            CNDP.
+            Une politique claire encadre l’usage des données, assurant à chaque citoyen un contrôle total sur ses
+            informations.
           </p>
         </div>
       </div>
@@ -52,13 +73,14 @@
         <div class="actor">
           <div class="actor-text">
             <p>
-              Le succès du e-Dirham repose sur une chaîne d'acteurs garantissant la fiabilité et la transparence du système.
+              Le succès du e-Dirham repose sur une chaîne d'acteurs garantissant la fiabilité et la transparence du
+              système.
               Bank Al-Maghrib agit comme superviseur et émetteur officiel.
             </p>
           </div>
-          <img class="actor-logo" src="../img/logo.png" alt="logo e-dirham" />
+          <img class="actor-logo" src="img/logo.png" alt="logo e-dirham" />
           <div class="actor-image">
-            <img src="../Brief-3/img/Rabat,_Bank_al-Maghrib.jpg" alt="Bank Al-Maghrib" />
+            <img src="img/Rabat,_Bank_al-Maghrib.jpg" alt="Bank Al-Maghrib" />
           </div>
         </div>
 
@@ -70,9 +92,9 @@
               tandis que les utilisateurs bénéficient d’un service sécurisé.
             </p>
           </div>
-          <img class="actor-logo" src="../Brief-3/img/logo.png" alt="logo e-dirham" />
+          <img class="actor-logo" src="img/logo.png" alt="logo e-dirham" />
           <div class="actor-image">
-            <img src="../Brief-3/img/cartebiometrique.jpg" alt="Opérateurs" />
+            <img src="img/cartebiometrique.jpg" alt="Opérateurs" />
           </div>
         </div>
 
@@ -84,9 +106,9 @@
               crédibilité du e-Dirham, conforme aux standards internationaux.
             </p>
           </div>
-          <img class="actor-logo" src="../Brief-3/img/logo.png" alt="logo e-dirham" />
+          <img class="actor-logo" src="img/logo.png" alt="logo e-dirham" />
           <div class="actor-image">
-            <img src="../Brief-3/img/e-Dirham en or.png" alt="Sécurité" />
+            <img src="img/e-Dirham en or.png" alt="Sécurité" />
           </div>
         </div>
       </div>
@@ -104,19 +126,20 @@
       <div class="tech-block">
         <div class="tech-text">
           <p>
-            Le e-Dirham repose sur une infrastructure technologique robuste, utilisant des protocoles de cryptographie avancée
+            Le e-Dirham repose sur une infrastructure technologique robuste, utilisant des protocoles de cryptographie
+            avancée
             pour assurer la confidentialité, l’intégrité et la traçabilité de chaque transaction.
           </p>
         </div>
         <div class="tech-logo-circle">
-          <img src="../Brief-3/img/logo.png" alt="Logo e-Dirham" />
+          <img src="img/logo.png" alt="Logo e-Dirham" />
         </div>
       </div>
 
       <div class="tech-double">
         <div class="tech-card">
           <div class="tech-card-logo">
-            <img src="../Brief-3/img/logo.png" alt="logo e-dirham" />
+            <img src="img/logo.png" alt="logo e-dirham" />
           </div>
           <p>
             « Le e-Dirham renforce la confiance, la sécurité et la souveraineté numérique du Maroc. »
@@ -133,5 +156,36 @@
       </div>
     </div>
   </section>
+  <footer>
+    <div class="footer1">
+      <div class="bankLogo">
+        <img src="img/Bank_Al-Maghrib_Logo.png" alt="">
+      </div>
+      <div class="followUs">
+        <h6 style="color: #2E3383;">FOLLOW US</h6>
+        <div class="socialMedia">
+          <img src="img/Facebook (3).png" alt="">
+          <img src="img/LinkedIn Circled.png" alt="">
+          <img src="img/X.png" alt="">
+          <img src="img/YouTube Squared.png" alt="">
+          <img src="img/Instagram Circle - Copie.png" alt="">
+        </div>
+      </div>
+      <div class="siteLogo">
+        <h5 style="color: goldenrod;">e-Dirham</h5>
+        <img src="img/Capture_d_écran_2025-10-22_162047-removebg-preview.png" alt="">
+      </div>
+    </div>
+    <div class="footer2">
+      <div class="copyright">
+        <h6>© Copyright 2025 All rights reserved</h6>
+      </div>
+      <div class="contact">
+        <h5>Contact Us</h5>
+        <img src="img/customer-service - Copie.png" alt="">
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
