--- a/impact_inclusion.html
+++ b/impact_inclusion.html
@@ -18,9 +18,9 @@
             <div class="nav-bar">
                 <a href="index.html">Accueil</a>
                 <a href="fonctionnement.html">Fonctionnement</a>
-                <a href="#">Sécurité & Confiance</a>
-                <a href="impact_inclusion.html">Inclusion & Impact</a>
-                <a href="#">Actualités & Lancement</a>
+                <a href="Sécurité&Confiance.html">Sécurité & Confiance</a>
+                <a href="#">Inclusion & Impact</a>
+                <a href="actualite.html">Actualités & Lancement</a>
             </div>
         </div>
     </header>
