--- a/actualite.html
+++ b/actualite.html
@@ -18,7 +18,7 @@
             <div class="nav-bar">
                 <a href="index.html">Accueil</a>
                 <a href="fonctionnement.html">Fonctionnement</a>
-                <a href="#">Sécurité & Confiance</a>
+                <a href="Sécurité&Confiance.html">Sécurité & Confiance</a>
                 <a href="impact_inclusion.html">Inclusion & Impact</a>
                 <a href="#">Actualités & Lancement</a>
             </div>
