--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="menu">
             <a href="#" class="icon-menu"><i class="fas fa-bars"></i></a>
             <div class="nav-bar">
-                <a href="index.html">Accueil</a>
+                <a href="#">Accueil</a>
                 <a href="fonctionnement.html">Fonctionnement</a>
-                <a href="#">Sécurité & Confiance</a>
+                <a href="Sécurité&Confiance.html">Sécurité & Confiance</a>
                 <a href="impact_inclusion.html">Inclusion & Impact</a>
-                <a href="#">Actualités & Lancement</a>
+                <a href="actualite.html">Actualités & Lancement</a>
             </div>
         </div>
     </header>  
